// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`editor.packShapes packs rotated shapes: packed shapes 1`] = `
[
  {
    "id": "shape:boxA",
    "index": "a1",
    "isLocked": false,
    "meta": {},
    "opacity": 1,
    "parentId": "wahtever",
    "props": {
      "align": "middle",
      "color": "black",
      "dash": "draw",
      "fill": "none",
      "font": "draw",
      "geo": "rectangle",
      "growY": 0,
      "h": 100,
      "labelColor": "black",
      "size": "m",
      "text": "",
      "url": "",
      "verticalAlign": "middle",
      "w": 100,
    },
    "rotation": 3.141592653589793,
    "type": "geo",
    "typeName": "shape",
    "x": 134,
    "y": 250,
  },
  {
    "id": "shape:boxB",
    "index": "a2",
    "isLocked": false,
    "meta": {},
    "opacity": 1,
    "parentId": "wahtever",
    "props": {
      "align": "middle",
      "color": "black",
      "dash": "draw",
      "fill": "none",
      "font": "draw",
      "geo": "rectangle",
      "growY": 0,
      "h": 100,
      "labelColor": "black",
      "size": "m",
      "text": "",
      "url": "",
      "verticalAlign": "middle",
      "w": 100,
    },
    "rotation": 0,
    "type": "geo",
    "typeName": "shape",
    "x": 150,
    "y": 150,
  },
  {
    "id": "shape:boxC",
    "index": "a3",
    "isLocked": false,
    "meta": {},
    "opacity": 1,
    "parentId": "wahtever",
    "props": {
      "align": "middle",
      "color": "black",
      "dash": "draw",
      "fill": "none",
      "font": "draw",
      "geo": "rectangle",
      "growY": 0,
      "h": 100,
      "labelColor": "black",
      "size": "m",
      "text": "",
      "url": "",
      "verticalAlign": "middle",
      "w": 100,
    },
    "rotation": 0,
    "type": "geo",
    "typeName": "shape",
    "x": 266,
    "y": 150,
  },
]
`;

exports[`editor.packShapes packs shapes: packed shapes 1`] = `
[
  {
    "id": "shape:boxA",
    "index": "a1",
    "isLocked": false,
    "meta": {},
    "opacity": 1,
    "parentId": "wahtever",
    "props": {
      "align": "middle",
      "color": "black",
      "dash": "draw",
      "fill": "none",
      "font": "draw",
      "geo": "rectangle",
      "growY": 0,
      "h": 100,
      "labelColor": "black",
      "size": "m",
      "text": "",
      "url": "",
      "verticalAlign": "middle",
      "w": 100,
    },
    "rotation": 0,
    "type": "geo",
    "typeName": "shape",
    "x": 84,
    "y": 200,
  },
  {
    "id": "shape:boxB",
    "index": "a2",
    "isLocked": false,
    "meta": {},
    "opacity": 1,
    "parentId": "wahtever",
    "props": {
      "align": "middle",
      "color": "black",
      "dash": "draw",
      "fill": "none",
      "font": "draw",
      "geo": "rectangle",
      "growY": 0,
      "h": 100,
      "labelColor": "black",
      "size": "m",
      "text": "",
      "url": "",
      "verticalAlign": "middle",
      "w": 100,
    },
    "rotation": 0,
    "type": "geo",
    "typeName": "shape",
    "x": 200,
    "y": 200,
  },
  {
    "id": "shape:boxC",
    "index": "a3",
    "isLocked": false,
    "meta": {},
    "opacity": 1,
    "parentId": "wahtever",
    "props": {
      "align": "middle",
      "color": "black",
      "dash": "draw",
      "fill": "none",
      "font": "draw",
      "geo": "rectangle",
      "growY": 0,
      "h": 100,
      "labelColor": "black",
      "size": "m",
      "text": "",
      "url": "",
      "verticalAlign": "middle",
      "w": 100,
    },
    "rotation": 0,
    "type": "geo",
    "typeName": "shape",
    "x": 316,
    "y": 200,
  },
]
`;
